--- a/about.html
+++ b/about.html
@@ -7,7 +7,8 @@
     <title>About</title>
 </head>
 <body>
-    <h1>Welcome to my about</h1>
+    <h1>Welcome to my new about</h1>
+    <p>My name is JK</p>
     <a href="/">HOME</a>
 </body>
 </html>
